used efcore with npgsql

--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -5,11 +5,9 @@ services:
     container_name: postgres_container
     image: postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: 'admin'
+      POSTGRES_PASSWORD: 'postgres'
       PGDATA: /data/postgres
-    volumes:
-       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5532:5432"
     networks:
@@ -20,8 +18,8 @@ services:
     container_name: pgadmin_container
     image: dpage/pgadmin4
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      PGADMIN_DEFAULT_EMAIL: stefan.kubinski@lakedice.com
+      PGADMIN_DEFAULT_PASSWORD: 'postgres'
       PGADMIN_CONFIG_SERVER_MODE: 'False'
       PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: 'False'
     volumes:
